versioned_docs/version-0.25.0/api/mobile/index.md
# @fishjam-cloud/react-native-client

## Connection

- [useConnection](functions/useConnection.md)
- [usePeers](functions/usePeers.md)
- [Metadata](type-aliases/Metadata.md)
- [useUpdatePeerMetadata](variables/useUpdatePeerMetadata.md)
- [useVAD](variables/useVAD.md)

## Devices

- [useCamera](functions/useCamera.md)
- [useInitializeDevices](variables/useInitializeDevices.md)
- [useScreenShare](variables/useScreenShare.md)

## Livestream

- [UseLivestreamStreamerResult](interfaces/UseLivestreamStreamerResult.md)
- [UseLivestreamViewerResult](interfaces/UseLivestreamViewerResult.md)
- [ConnectStreamerConfig](type-aliases/ConnectStreamerConfig.md)
- [StreamerInputs](type-aliases/StreamerInputs.md)
- [useLivestreamStreamer](variables/useLivestreamStreamer.md)
- [useLivestreamViewer](variables/useLivestreamViewer.md)

## Other

- [FishjamProvider](functions/FishjamProvider.md)
- [RTCPIPView](functions/RTCPIPView.md)
- [RTCView](functions/RTCView.md)
- [useCustomSource](functions/useCustomSource.md)
- [Variant](enumerations/Variant.md)
- [JoinRoomConfig](interfaces/JoinRoomConfig.md)
- [SimulcastConfig](interfaces/SimulcastConfig.md)
- [AuthErrorReason](type-aliases/AuthErrorReason.md)
- [BandwidthLimits](type-aliases/BandwidthLimits.md)
- [Brand](type-aliases/Brand.md)
- [ConnectViewerConfig](type-aliases/ConnectViewerConfig.md)
- [CustomSource](type-aliases/CustomSource.md)
- [DeviceError](type-aliases/DeviceError.md)
- [DeviceItem](type-aliases/DeviceItem.md)
- [FishjamProviderProps](type-aliases/FishjamProviderProps.md)
- [ForegroundServiceConfig](type-aliases/ForegroundServiceConfig.md)
- [InitializeDevicesResult](type-aliases/InitializeDevicesResult.md)
- [InitializeDevicesSettings](type-aliases/InitializeDevicesSettings.md)
- [InitializeDevicesStatus](type-aliases/InitializeDevicesStatus.md)
- [JoinErrorReason](type-aliases/JoinErrorReason.md)
- [MiddlewareResult](type-aliases/MiddlewareResult.md)
- [PeerId](type-aliases/PeerId.md)
- [PeerStatus](type-aliases/PeerStatus.md)
- [PeerWithTracks](type-aliases/PeerWithTracks.md)
- [PersistLastDeviceHandlers](type-aliases/PersistLastDeviceHandlers.md)
- [ReconnectConfig](type-aliases/ReconnectConfig.md)
- [ReconnectionStatus](type-aliases/ReconnectionStatus.md)
- [RoomType](type-aliases/RoomType.md)
- [RTCPIPViewProps](type-aliases/RTCPIPViewProps.md)
- [RTCVideoViewProps](type-aliases/RTCVideoViewProps.md)
- [SimulcastBandwidthLimit](type-aliases/SimulcastBandwidthLimit.md)
- [SimulcastBandwidthLimits](type-aliases/SimulcastBandwidthLimits.md)
- [StreamConfig](type-aliases/StreamConfig.md)
- [Track](type-aliases/Track.md)
- [TrackBandwidthLimit](type-aliases/TrackBandwidthLimit.md)
- [TrackId](type-aliases/TrackId.md)
- [TrackMiddleware](type-aliases/TrackMiddleware.md)
- [TracksMiddleware](type-aliases/TracksMiddleware.md)
- [TracksMiddlewareResult](type-aliases/TracksMiddlewareResult.md)
- [UseInitializeDevicesParams](type-aliases/UseInitializeDevicesParams.md)
- [UseSandboxProps](type-aliases/UseSandboxProps.md)
- [SimulcastConfig](variables/SimulcastConfig.md)
- [useForegroundService](variables/useForegroundService.md)
- [useMicrophone](variables/useMicrophone.md)
- [useSandbox](variables/useSandbox.md)
